@@ -1,5 +1,7 @@
 1.2.0 to 1.2.1
 ----------------------------------------------------------------------
+- Added a more descriptive error message when an invalid outage ID
+  is entered in the webUI. Bug 498
 - Added display of ifAlias in an event or notification.  It uses the nodeid
   and the ipaddr to find it.  Use %ifalias% to see this in the event or 
   notification.  Bug 1140
